typescript/checker/tests/conformance/decorators/invalid/decoratorOnFunctionDeclaration.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/invalid/decoratorOnFunctionDeclaration.ts:3:1
  |
3 | @dec
  | ^

